fix: change Instances to LinkedList<Instance>